# gitnote

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  git-note
.github/workflows/: release.yml  rust.yml
gitnote-core/: .gitignore  Cargo.toml  README.md  build.sh  copy.sh
gitnote-core/src/: argument.rs  cli.rs  config.rs  diff.rs  handlers.rs  io.rs  lib.rs  libgit.rs  main.rs  note.rs  path.rs  repository.rs  stdio.rs  testlib.rs  utils.rs
gitnote-core/src/cli/: argument.rs  config.rs  mod.rs
gitnote-core/src/config/: mod.rs  options.rs
gitnote-gui/: .env  package-lock.json  package.json
gitnote-gui/public/: index.html
gitnote-gui/src/: App.js  AppRoutes.js
gitnote-gui/src/components/: Message.js  Note.js
gitnote-gui/src/protocol/: MessageProtocol.js  MssageProtocol.js  Protocol.js  Setup.js
gitnote-jetbrains/: .gitignore  build.gradle.kts  settings.gradle.kts
gitnote-jetbrains/src/main/kotlin/: myDialog.form  myDialog.java
gitnote-jetbrains/src/main/kotlin/io/cjlee/gitnote/: AddGitNoteGutterIconRenderer.kt  AddNoteGutterIconRenderer.kt  CustomLineMarkerService.kt  DebouncedDocumentListener.kt  EditorCustomizer.kt  GitNoteDialog.kt  GitNoteDocumentListener.kt  GitNoteEditorFactoryListener.kt  GitNoteGutterIconRenderer.kt  GitNoteService.kt  IconVisibility.kt  NoteDialog.kt  NoteDocumentListener.kt  NoteEditorFactoryListener.kt  NoteGutterIconRenderer.kt  NoteIconGutterIconRenderer.kt  NoteStrokeLineMarkerRenderer.kt
gitnote-jetbrains/src/main/kotlin/io/cjlee/gitnote/core/: ConnectorLoader.kt  CoreConnector.kt  CoreHandler.kt  CoreHandlerFactory.kt  JniCoreConnector.kt  Note.kt  Platform.kt  ProcessCoreConnector.kt
gitnote-jetbrains/src/main/kotlin/io/cjlee/gitnote/jcef/: GitNoteViewerWindow.kt  JcefSchemeHandlerFactory.kt  JcefViewerWindowService.kt  WindowFactory.kt
gitnote-jetbrains/src/main/kotlin/io/cjlee/gitnote/jcef/protocol/: JcefInjectionLoadHandler.kt  MessageProtocol.kt  MessageProtocolFrontHandler.kt  MessageProtocolHandler.kt  Protocol.kt  ProtocolFrontHandler.kt  ProtocolHandler.kt  ProtocolMessaage.kt
gitnote-jetbrains/src/main/kotlin/io/cjlee/gitnote/jcef/resource/: ClosedConnection.kt  JcefResourceHandler.kt  OpenedConnection.kt  ResourceHandlerState.kt
gitnote-jetbrains/src/main/kotlin/io/cjlee/gitnote/jcef/theme/: ThemeMessageProtocolHandler.kt  ThemeProtocolHandler.kt
gitnote-jetbrains/src/main/kotlin/io/cjlee/gitnote/toolWindow/: WindowFactory.kt
gitnote-jetbrains/src/main/resources/webview/: index.html
src/: main.rs
