[package]
name = "gitnote"
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/cjlee38/gitnote"
repository = "https://github.com/cjlee38/gitnote"
description = "An ephemeral comment extension based on Git."
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.*",
    "*.md",
]

[[bin]]
name = "git-note"
path = "src/main.rs"
readme = "../README.md"

[dependencies]
clap = { version = "4", features = ["cargo", "wrap_help"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
anyhow = "1.0"
sha256 = "1.5.0"
configparser = "3.0.4"
chrono = "0.4.38"
colored = "2.1.0"
unicode-width = "0.1.12"
similar = "2.5.0"

[dev-dependencies]
tempfile = "3"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
