[package]
name = "gitnote"
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/cjlee38/gitnote"
repository = "https://github.com/cjlee38/gitnote"
description = "An ephemeral comment extension based on Git."
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.*",
    "*.md",
]

[[bin]]
name = "git-note"
path = "src/main.rs"
readme = "../README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4", features = ["cargo", "wrap_help", "derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
anyhow = "1.0"
sha256 = "1.5.0" # TODO : migrate to sha1
sha1_smol = "1.0.0"
configparser = "3.0.4"
chrono = "0.4.38"
colored = "2.1.0"
unicode-width = "0.1.12"
similar = "2.5.0"
itertools = "0.13.0"
serde_yaml_ng = "0.10.0"
encoding_rs = "0.8.34"
once_cell = "1.19.0"
flate2 = "1.0"
regex = "1.10.6"
jni = "0.21.1"

[dev-dependencies]
tempfile = "3"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
